<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>condition_plugins</name>
  <version>0.0.0</version>
  <description>The condition_plugins package</description>

  <maintainer email="masaya@todo.todo">masaya</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>scenario_conditions</depend>
  <depend>scenario_logger</depend>
  <depend>scenario_logger_msgs</depend>
  <depend>scenario_utility</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <scenario_conditions plugin="${prefix}/plugins.xml" />
  </export>
</package>
